--- a/samples/autoRotation.html
+++ b/samples/autoRotation.html
@@ -73,6 +73,9 @@ canvas {
 						display: true,
 						text: 'Chart.js Bar Chart'
 					},
+					font: {
+						size: 16,
+					},
 					plugins: {
 						annotation: {
 							drawTime: 'afterDatasetsDraw',
@@ -104,6 +107,9 @@ canvas {
 									borderColor: 'black',
 									borderWidth: 5,
 									label: {
+										font: {
+											size: 12,
+										},
 										rotation: 'auto',
 										backgroundColor: 'red',
 										content: ['Test Multi', 'Line Label'],
