--- a/samples/labels.html
+++ b/samples/labels.html
@@ -142,6 +142,7 @@
 									borderColor: 'black',
 									borderWidth: 5,
 									label: {
+										position: 'right',
 										yAdjust: -20,
 										backgroundColor: 'red',
 										content: 'This is a long test label',
@@ -162,7 +163,6 @@
 									borderWidth: 5,
 									label: {
 										position: 'bottom',
-										yAdjust: 100,
 										content: 'This is another test label',
 										enabled: true
 									},
