--- a/samples/labels.html
+++ b/samples/labels.html
@@ -141,7 +141,7 @@
 									borderColor: 'black',
 									borderWidth: 5,
 									label: {
-										position: 'left',
+										position: 'start',
 										yAdjust: -20,
 										backgroundColor: 'red',
 										content: 'This is a long test label',
@@ -160,7 +160,7 @@
 									borderColor: 'red',
 									borderWidth: 5,
 									label: {
-										position: 'top',
+										position: 'start',
 										content: 'This is another test label',
 										enabled: true
 									},
