--- a/old_samples/line-time-scale.html
+++ b/old_samples/line-time-scale.html
@@ -107,15 +107,15 @@
 							// round: 'day'
 							tooltipFormat: 'dd.MM.yyyy HH:mm'
 						},
-						scaleLabel: {
+						title: {
 							display: true,
-							labelString: 'Date'
+							text: 'Date'
 						}
 					},
 					y: {
-						scaleLabel: {
+						title: {
 							display: true,
-							labelString: 'value'
+							text: 'value'
 						}
 					}
 				},
