--- a/old_samples/updates.html
+++ b/old_samples/updates.html
@@ -113,12 +113,12 @@
 					scales: {
 						x: {
 							position: 'top',
-							gridLines: {
+							grid: {
 								zeroLineColor: 'rgba(0,255,0,1)'
 							},
-							scaleLabel: {
+							title: {
 								display: true,
-								labelString: 'x axis'
+								text: 'x axis'
 							},
 							ticks: {
 								maxRotation: 0,
@@ -127,12 +127,12 @@
 						},
 						y: {
 							position: 'right',
-							gridLines: {
+							grid: {
 								zeroLineColor: 'rgba(0,255,0,1)'
 							},
-							scaleLabel: {
+							title: {
 								display: true,
-								labelString: 'y axis'
+								text: 'y axis'
 							},
 							ticks: {
 								reverse: true
