adds test cases

--- a/old_samples/polygon.html
+++ b/old_samples/polygon.html
@@ -147,6 +147,22 @@
 										console.log('Annotation triangle', context);
 									}
 								},
+								square: {
+									type: 'polygon',
+									xScaleID: 'x',
+									yScaleID: 'y',
+									xValue: -40,
+									yValue: -40,
+									sides: 4,
+									radius: 50,
+									rotation: 45,
+									backgroundColor: 'rgba(101, 33, 171, 0.5)',
+									borderColor: 'rgb(101, 33, 171)',
+									borderWidth: 2,
+									click(context) {
+										console.log('Annotation triangle', context);
+									}
+								},
 								pentagon: {
 									type: 'polygon',
 									xScaleID: 'x',
